Fixing alignment of fb page

--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,8 @@ body {
   height: 91px;
   font-family: 'Inter', sans-serif;
   gap: 2em;
+  position: relative;
+  width: 100%;
 }
 
 .nav--icon {
@@ -22,6 +24,74 @@ body {
 .nav--item{
   color: white;
   font-weight: bold;
+}
+
+.nav--button {
+  color: white;
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  right: 25px;
+  transform: translateY(-50%);
+  display: block;
+}
+
+.navigation--menu{
+ 
+}
+
+.navigation--menu ul {
+  display: flex;
+  padding: 0;
+  
+}
+.navigation--menu li {
+  list-style-type: none;
+  margin: 0 1rem;
+}
+.navigation--menu li a {
+  text-decoration: none;
+  display: block;
+  width: 100%;
+  color: white;
+}
+
+.navigation--menu, .nav--button {
+  margin-left: auto;
+}
+
+
+@media screen and (min-width:450px){
+  .nav--button, .navigation--menu{
+    display: none;
+  }
+}
+
+@media screen and (max-width:450px) {
+  
+  .nav--item{
+    display: none;
+  }
+  
+  .navigation--menu ul {
+    position: absolute;
+    top: 60px;
+    left: 0;
+    flex-direction: column;
+    width: 100%;
+    height: 100px;
+    background-color: white;
+    border-top: 1px solid black;
+  }
+  .navigation--menu li {
+    text-align: center;
+    margin: 0;
+  }
+  .navigation--menu li a {
+    color: black;
+    width: 100%;
+    padding: 1.5rem 0;
+  }
 }
 
 /* Main Container */
@@ -46,7 +116,16 @@ body {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   align-items: center;
+  margin-left: 15px;
+  margin-right: 15px;
+  margin-top: 15px;
+}
 
+@media screen and (max-width:960px){
+  .content--row{
+    grid-template-columns:1fr;
+    justify-content: center;
+  }
 }
 
 .champion--container {
@@ -74,6 +153,15 @@ body {
 
 .champion--list {
   margin-left: 20px;
+}
+
+.fb {
+  display: flex;
+  justify-content: center;
+}
+
+.fb--container {
+  width: 340px;
 }
 
 
